# ApolloESP32Application

./: .clang-format  .cproject  .editorconfig  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  build.sh  mark_build.py  partitions.csv  pro2bin.py  sdkconfig  sdkconfig.defaults
.github/scripts/: clone-submodules.ps1  create-jwt.rb  parse-submodules.js
.github/workflows/: build.yml
components/adc/: CMakeLists.txt  adc_control.c  adc_control.h
components/apollo_console/: CMakeLists.txt  apollo_console.c
components/apollo_ota/: CMakeLists.txt  apollo_ota.c  crc32.c  dspic_update.c  fpga_update.c  ocpp_ota.c  ota_command.c  ota_location.c  ota_log.c  pic_update.c  safe_ota.c  segmented_ota.c  serve.sh
components/apollo_ota/certs/: create_cert.sh
components/apollo_ota/include/: apollo_ota.h  crc32.h  ocpp_ota.h  ota_command.h  ota_location.h  ota_log.h  pic_update.h  safe_ota.h  segmented_ota.h
components/audioBuzzer/: CMakeLists.txt  audioBuzzer.c  audioBuzzer.h
components/authentication/: CMakeLists.txt  authentication.c  authentication.h  rfidPairing.c  rfidPairing.h
components/ble/: CMakeLists.txt  ble_common.c  ble_common.h  ble_gap.c  ble_gatt_server.c  ble_gatt_server.h  ble_interface.c  ble_service_wifi_config.c  (+1 more)
components/calibration/: CMakeLists.txt  Kconfig  calibration-message.pb.c  calibration-message.pb.h  calibration-message.proto  calibration.c  calibration_crc.c  calibration_emeter.c  calibration_https.c  calibration_igain.c  calibration_ioffs.c  calibration_util.c  calibration_verify.c  calibration_vgain.c  calibration_voffs.c  emeter.c
components/calibration/include/: calibration-message.pb.h  calibration.h  calibration_crc.h  calibration_emeter.h  calibration_mid.h  calibration_util.h  emeter.h  pb.h
components/ocpp/: CMakeLists.txt  Kconfig  ocpp_auth.c  ocpp_call_with_cb.c  ocpp_listener.c  ocpp_reservation.c  ocpp_smart_charging.c  ocpp_task.c  ocpp_transaction.c
components/ocpp/include/: ocpp_auth.h  ocpp_call.h  ocpp_call_with_cb.h  ocpp_listener.h  ocpp_reservation.h  ocpp_smart_charging.h  ocpp_task.h  ocpp_transaction.h
components/ocpp/include/messages/call_messages/: ocpp_call_cb.h  ocpp_call_request.h
components/ocpp/include/messages/error_messages/: ocpp_call_error.h  ocpp_call_error_cb.h
components/ocpp/include/messages/result_messages/: ocpp_call_result.h  ocpp_call_result_cb.h
components/ocpp/include/ocpp_json/: ocppj_message_structure.h  ocppj_validation.h
components/ocpp/include/types/: ocpp_authorization_data.h  ocpp_authorization_status.h  ocpp_availability_status.h  ocpp_availability_type.h  ocpp_cancel_reservation_status.h  ocpp_charge_point_error_code.h  ocpp_charge_point_status.h  ocpp_charging_profile.h  ocpp_charging_profile_status.h  ocpp_ci_string_type.h  ocpp_clear_cache_status.h  ocpp_clear_charging_profile_status.h  ocpp_configuration_status.h  ocpp_create_meter_value.h  ocpp_csl.h  ocpp_data_transfer_status.h  ocpp_date_time.h  ocpp_diagnostics_status.h  ocpp_enum.h  ocpp_firmware_status.h  ocpp_get_composite_schedule_status.h  ocpp_id_tag_info.h  ocpp_id_token.h  ocpp_key_value.h  ocpp_message_trigger.h  ocpp_meter_value.h  ocpp_phase_rotation.h  ocpp_reason.h  ocpp_registration_status.h  ocpp_remote_start_stop_status.h  ocpp_reservation_status.h  ocpp_reset_status.h  ocpp_reset_type.h  ocpp_trigger_message_status.h  ocpp_unlock_status.h  ocpp_update_status.h  ocpp_update_type.h
components/ocpp/messages/call_messages/: autorize.c  boot_notification.c  data_transfer.c  diagnostics_status_notification.c  firmware_status_notification.c  heartbeat.c  meter_values.c  ocpp_create_call.c  start_transaction.c  status_notification.c  stop_transaction.c
components/ocpp/messages/error_messages/: ocpp_create_error.c
components/ocpp/messages/result_messages/: cancel_reservation.c  change_availability.c  change_configuration.c  clear_cache.c  clear_charging_profile.c  data_transfer.c  get_composite_schedule.c  get_configuration.c  get_diagnostics.c  get_local_list_version.c  ocpp_create_result.c  remote_start_stop_transaction.c  reserve_now.c  reset.c  send_local_list.c  set_charging_profile.c  trigger_message.c  unlock_connector.c  update_firmware.c
components/ocpp/ocpp_json/: ocppj_message_structure.c  ocppj_validation.c
components/ocpp/types/: ocpp_authorization_data.c  ocpp_authorization_status.c  ocpp_availability_type.c  ocpp_charge_point_status.c  ocpp_charging_profile.c  ocpp_ci_string_type.c  ocpp_csl.c  ocpp_date_time.c  ocpp_diagnostics_status.c  ocpp_enum.c  ocpp_id_tag_info.c  ocpp_key_value.c  ocpp_meter_value.c  ocpp_phase_rotation.c  ocpp_reason.c  ocpp_registration_status.c  ocpp_update_status.c
components/zaptec_cloud/: CMakeLists.txt  Kconfig  cloud_listener.c  device_methods.c  device_twin.c  rfc3986.c  sas_token.c  zaptec_cloud_observations.c
components/zaptec_cloud/include/: device_methods.h  device_twin.h  rfc3986.h  sas_token.h  zaptec_cloud_listener.h  zaptec_cloud_observations.h  zaptec_obeservations.h
components/zaptec_cloud/include/wpa_supplicant/: common.h  crypto.h  sha256.h
components/zaptec_cloud/wpa_supplicant/: common.c  readme.txt  sha256.c
docs/: ota_and_bootloaders.md  time_sync.md
log_analysis/: Pipfile  basic_inspection.ipynb  cat_events.py  get_ocmf.py
main/: CMakeLists.txt  DeviceInfo.h  IT3PCalculator.c  IT3PCalculator.h  Kconfig.projbuild  OCMF.c  OCMF.h  adc_control.c  adc_control.h  audioBuzzer.c  certificate.c  certificate.h  chargeController.c  chargeController.h  chargeSession.c  chargeSession.h  connectivity.c  connectivity.h  crc32.c  diagnostics_log.c  diagnostics_log.h  diagnostics_port.c  diagnostics_port.h  efuse.c  efuse.h  fat.c  fat.h  idf_component.yml  main.c  main.h  mqtt_demo.c  mqtt_demo.h  network.c  network.h  ocpp.c  ocpp.h  offlineHandler.c  offlineHandler.h  offlineSession.c  offlineSession.h  (+14 more)
main/cert/: bundle7.crt  bundle8.crt  zaptec_ca.cer
ocpp_server/: Pipfile  README.md  chargepoint.py  server.py
test/: CMakeLists.txt  Makefile  partitions.csv  qemu.sh  sdkconfig  sdkconfig.defaults
(+140 files in other folders)
